--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/photon.min.css">
+    <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
 
-    <!-- Javascript -->
-    <script src="js/menu.js" charset="utf-8"></script>
+    <!-- Javascript
+    <script src="js/menu.js" charset="utf-8"></script>-->
+    <style>
+        body { margin:0; padding:0;  }
+        #map { position: absolute; top:0; bottom:0; right:0; left:0;  }
+    </style>
 </head>
 <body>
 <div class="window">
@@ -55,126 +60,8 @@
             </div>
 
             <div class="pane">
-                <table class="table-striped">
-                    <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Kind</th>
-                        <th>Date Modified</th>
-                        <th>Author</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>bars.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>base.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>button-groups.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>buttons.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>docs.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>forms.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>grid.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>icons.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>images.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>lists.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>mixins.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>navs.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>normalize.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>photon.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>tables.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>tabs.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>utilities.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    <tr>
-                        <td>variables.scss</td>
-                        <td>Document</td>
-                        <td>Oct 13, 2015</td>
-                        <td>connors</td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div id="map"></div>
+                <script src="js/map.js"></script>
             </div>
         </div>
     </div>
